--- a/server/package.json
+++ b/server/package.json
@@ -1,20 +1,33 @@
 {
-    "name": "fantasy-premier-league",
-    "description": "An assistance application for uk.eurosport.yahoo.com/fantasy/premier-league",
-    "repository": {
-        "type": "git",
-        "url" : "https://github.com/crossgate9/fantasy-premier-league.git"
-    },
-    "version": "0.1.0",
-    "author": "Allen Koo <crossgate9@gmail.com>",
-    "readmeFilename": "../README.md",
-    "dependencies": {
-        "async": "*",
-        "sprintf": "*",
-        "node-getopt": "*",
-        "underscore": "*"
-    },
-    "engines": {
-        "node": ">=0.6"
-    }
+  "name": "fantasy-premier-league",
+  "description": "An assistance application for uk.eurosport.yahoo.com/fantasy/premier-league",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/crossgate9/fantasy-premier-league.git"
+  },
+  "version": "0.1.0",
+  "author": "Allen Koo <crossgate9@gmail.com>",
+  "dependencies": {
+    "async": "*",
+    "sprintf": "*",
+    "node-getopt": "*",
+    "underscore": "*"
+  },
+  "engines": {
+    "node": ">=0.6"
+  },
+  "bugs": {
+    "url": "https://github.com/crossgate9/fantasy-premier-league/issues"
+  },
+  "homepage": "https://github.com/crossgate9/fantasy-premier-league",
+  "main": "crawler.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [
+    "nodejs",
+    "fantasy-premier-league"
+  ],
+  "license": "BSD-2-Clause"
 }
